--- a/pages/media-library/components/context-menu/css/context-menu.scss
+++ b/pages/media-library/components/context-menu/css/context-menu.scss
@@ -3,7 +3,7 @@
 	background-color: #fff;
 	border: 1px solid #ddd;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-	border-radius: 4px;
+	border-radius: 0.25rem;
 	z-index: 100;
 	min-width: 200px;
 	padding: 6px 0 !important;
@@ -13,7 +13,7 @@
 		align-items: center;
 		width: 100%;
 		text-align: left;
-		padding: 12px 12px;
+		padding: 0.75rem;
 		color: #333;
 		font-size: 14px;
 		line-height: 20px;
@@ -47,6 +47,6 @@
 
 	svg {
         fill: none;
-        margin-right: 8px;
+        margin-right: 0.5rem;
 	}
 }
